crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_bracketed_spans.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..338
  HEADING@0..18
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..17
      TEXT@2..17 "Bracketed Spans"
    NEWLINE@17..18 "\n"
  BLANK_LINE@18..19
    BLANK_LINE@18..19 "\n"
  PARAGRAPH@19..63
    TEXT@19..32 "Simple span: "
    BRACKETED_SPAN@32..62
      SPAN_BRACKET_OPEN@32..33 "["
      SPAN_CONTENT@33..49
        TEXT@33..49 "highlighted text"
      SPAN_BRACKET_CLOSE@49..50 "]"
      SPAN_ATTRIBUTES@50..62
        TEXT@50..51 "{"
        ATTR_CLASS@51..61 ".highlight"
        TEXT@61..62 "}"
    NEWLINE@62..63 "\n"
  BLANK_LINE@63..64
    BLANK_LINE@63..64 "\n"
  PARAGRAPH@64..121
    TEXT@64..79 "With emphasis: "
    BRACKETED_SPAN@79..120
      SPAN_BRACKET_OPEN@79..80 "["
      SPAN_CONTENT@80..109
        TEXT@80..88 "This is "
        STRONG@88..96
          STRONG_MARKER@88..90 "**"
          TEXT@90..94 "bold"
          STRONG_MARKER@94..96 "**"
        TEXT@96..101 " and "
        EMPHASIS@101..109
          EMPHASIS_MARKER@101..102 "*"
          TEXT@102..108 "italic"
          EMPHASIS_MARKER@108..109 "*"
      SPAN_BRACKET_CLOSE@109..110 "]"
      SPAN_ATTRIBUTES@110..120
        TEXT@110..111 "{"
        WHITESPACE@111..112 " "
        ATTR_CLASS@112..119 ".styled"
        TEXT@119..120 "}"
    NEWLINE@120..121 "\n"
  BLANK_LINE@121..122
    BLANK_LINE@121..122 "\n"
  PARAGRAPH@122..169
    TEXT@122..133 "With code: "
    BRACKETED_SPAN@133..168
      SPAN_BRACKET_OPEN@133..134 "["
      SPAN_CONTENT@134..155
        TEXT@134..138 "The "
        INLINE_CODE@138..150
          INLINE_CODE_MARKER@138..139 "`"
          INLINE_CODE_CONTENT@139..149 "function()"
          INLINE_CODE_MARKER@149..150 "`"
        TEXT@150..155 " call"
      SPAN_BRACKET_CLOSE@155..156 "]"
      SPAN_ATTRIBUTES@156..168
        TEXT@156..157 "{"
        ATTR_CLASS@157..166 ".code-ref"
        WHITESPACE@166..167 " "
        TEXT@167..168 "}"
    NEWLINE@168..169 "\n"
  BLANK_LINE@169..170
    BLANK_LINE@169..170 "\n"
  PARAGRAPH@170..225
    TEXT@170..186 "Multiple spans: "
    BRACKETED_SPAN@186..197
      SPAN_BRACKET_OPEN@186..187 "["
      SPAN_CONTENT@187..192
        TEXT@187..192 "first"
      SPAN_BRACKET_CLOSE@192..193 "]"
      SPAN_ATTRIBUTES@193..197
        TEXT@193..194 "{"
        ATTR_CLASS@194..196 ".a"
        TEXT@196..197 "}"
    TEXT@197..202 " and "
    BRACKETED_SPAN@202..214
      SPAN_BRACKET_OPEN@202..203 "["
      SPAN_CONTENT@203..209
        TEXT@203..209 "second"
      SPAN_BRACKET_CLOSE@209..210 "]"
      SPAN_ATTRIBUTES@210..214
        TEXT@210..211 "{"
        ATTR_CLASS@211..213 ".b"
        TEXT@213..214 "}"
    TEXT@214..224 " together."
    NEWLINE@224..225 "\n"
  BLANK_LINE@225..226
    BLANK_LINE@225..226 "\n"
  PARAGRAPH@226..274
    TEXT@226..243 "Nested brackets: "
    BRACKETED_SPAN@243..273
      SPAN_BRACKET_OPEN@243..244 "["
      SPAN_CONTENT@244..262
        UNRESOLVED_REFERENCE@244..262
          LINK_START@244..245
            LINK_START@244..245 "["
          LINK_TEXT@245..261
            TEXT@245..261 "literal brackets"
          TEXT@261..262 "]"
      SPAN_BRACKET_CLOSE@262..263 "]"
      SPAN_ATTRIBUTES@263..273
        TEXT@263..264 "{"
        ATTR_CLASS@264..272 ".example"
        TEXT@272..273 "}"
    NEWLINE@273..274 "\n"
  BLANK_LINE@274..275
    BLANK_LINE@274..275 "\n"
  PARAGRAPH@275..338
    TEXT@275..295 "Complex attributes: "
    BRACKETED_SPAN@295..337
      SPAN_BRACKET_OPEN@295..296 "["
      SPAN_CONTENT@296..300
        TEXT@296..300 "text"
      SPAN_BRACKET_CLOSE@300..301 "]"
      SPAN_ATTRIBUTES@301..337
        TEXT@301..302 "{"
        ATTR_ID@302..307 "#myid"
        WHITESPACE@307..309 "  "
        ATTR_CLASS@309..316 ".class1"
        WHITESPACE@316..317 " "
        ATTR_CLASS@317..324 ".class2"
        WHITESPACE@324..325 " "
        ATTR_KEY_VALUE@325..336
          ATTR_KEY@325..328 "key"
          TEXT@328..329 "="
          ATTR_VALUE@329..336 "\"value\""
        TEXT@336..337 "}"
    NEWLINE@337..338 "\n"
