crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_crlf_fenced_divs.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..51
  HEADING@0..8
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..6
      TEXT@2..6 "Test"
    NEWLINE@6..8 "\r\n"
  BLANK_LINE@8..10
    BLANK_LINE@8..10 "\r\n"
  FENCED_DIV@10..42
    DIV_FENCE_OPEN@10..22
      TEXT@10..13 ":::"
      DIV_INFO@13..20
        TEXT@13..14 "{"
        ATTR_CLASS@14..19 ".note"
        TEXT@19..20 "}"
      NEWLINE@20..22 "\r\n"
    PARAGRAPH@22..37
      TEXT@22..35 "Content here."
      NEWLINE@35..37 "\r\n"
    DIV_FENCE_CLOSE@37..42
      TEXT@37..40 ":::"
      NEWLINE@40..42 "\r\n"
  BLANK_LINE@42..44
    BLANK_LINE@42..44 "\r\n"
  PARAGRAPH@44..51
    TEXT@44..49 "Done."
    NEWLINE@49..51 "\r\n"
