crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_four_space_rule_continuation_2sp.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..9
  LIST@0..4
    LIST_ITEM@0..4
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..4
        TEXT@2..3 "A"
        NEWLINE@3..4 "\n"
  BLANK_LINE@4..5
    BLANK_LINE@4..5 "\n"
  PARAGRAPH@5..9
    TEXT@5..8 "  B"
    NEWLINE@8..9 "\n"
